apps/rancher/base/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
  labels:
    name: cattle-system
    app.kubernetes.io/name: rancher
    app.kubernetes.io/component: namespace
